#feat: introduce new domain entities and update package structure for exams and patients